// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Scale > renders correct no type is set 1`] = `
<g>
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(90 20 20) 
        translate(19 -20)
        "
    width="2"
  />
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(130 20 20) 
        translate(19 -20)
        "
    width="2"
  />
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(170 20 20) 
        translate(19 -20)
        "
    width="2"
  />
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(210 20 20) 
        translate(19 -20)
        "
    width="2"
  />
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(250 20 20) 
        translate(19 -20)
        "
    width="2"
  />
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(290 20 20) 
        translate(19 -20)
        "
    width="2"
  />
</g>
`;

exports[`Scale > renders correct no type is set to circle 1`] = `
<g>
  <circle
    class="someClassName"
    fill="lime"
    r="2"
    stroke="none"
    transform="
        rotate(90 20 20) 
        translate(19 -20)
        "
  />
  <circle
    class="someClassName"
    fill="lime"
    r="2"
    stroke="none"
    transform="
        rotate(130 20 20) 
        translate(19 -20)
        "
  />
  <circle
    class="someClassName"
    fill="lime"
    r="2"
    stroke="none"
    transform="
        rotate(170 20 20) 
        translate(19 -20)
        "
  />
  <circle
    class="someClassName"
    fill="lime"
    r="2"
    stroke="none"
    transform="
        rotate(210 20 20) 
        translate(19 -20)
        "
  />
  <circle
    class="someClassName"
    fill="lime"
    r="2"
    stroke="none"
    transform="
        rotate(250 20 20) 
        translate(19 -20)
        "
  />
  <circle
    class="someClassName"
    fill="lime"
    r="2"
    stroke="none"
    transform="
        rotate(290 20 20) 
        translate(19 -20)
        "
  />
</g>
`;

exports[`Scale > renders correct no type is set to rect 1`] = `
<g>
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(90 20 20) 
        translate(19 -20)
        "
    width="2"
  />
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(130 20 20) 
        translate(19 -20)
        "
    width="2"
  />
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(170 20 20) 
        translate(19 -20)
        "
    width="2"
  />
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(210 20 20) 
        translate(19 -20)
        "
    width="2"
  />
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(250 20 20) 
        translate(19 -20)
        "
    width="2"
  />
  <rect
    class="someClassName"
    fill="lime"
    height="10"
    stroke="none"
    transform="
        rotate(290 20 20) 
        translate(19 -20)
        "
    width="2"
  />
</g>
`;

exports[`Scale > renders correct with custom render function for ticks 1`] = `
<g>
  <circle
    r="2"
    x="19"
    y="-20"
  />
  <circle
    r="2"
    x="19"
    y="-20"
  />
  <circle
    r="2"
    x="19"
    y="-20"
  />
  <circle
    r="2"
    x="19"
    y="-20"
  />
  <circle
    r="2"
    x="19"
    y="-20"
  />
  <circle
    r="2"
    x="19"
    y="-20"
  />
</g>
`;
